[fix] collapse view

--- a/public/stylesheets/syllabus.css
+++ b/public/stylesheets/syllabus.css
@@ -55,6 +55,7 @@ p + h2 {
 }
 
 #basic table {
+    font-size: 14px;
     background: white;
     width: 100%;
     margin: 0 auto;
@@ -66,9 +67,11 @@ p + h2 {
     text-align: right;
     font-weight: bold;
     padding: 10px;
+    width: 25%;
 }
 
 #basic table td {
     text-align: left;
     padding: 10px;
+    width: 25%;    
 }
